--- a/pages/weather/weather.wxml
+++ b/pages/weather/weather.wxml
@@ -10,14 +10,21 @@
       <view class="today-info">
         <text class="weather">{{todyWeather.weather}}</text>
       </view>
-      <view class="realtime-temperature">
-        {{todyWeather.realtimeTemperature}}
-
-        <!--<text class="realtime-date">{{todyWeather.date}}</text>-->
+      <view class="ui-flex">
+        <view class="ui-flex-item text-center">
+          <view class="realtime-temperature">
+            {{todyWeather.realtimeTemperature}}
+          </view>
+        </view>
+        <view class="ui-flex-item text-center">
+          <image class="weather-icon-big" src="{{todyWeather.iconSrc}}" background-size="cover" mode="aspectFit"></image>
+        </view>
       </view>
+      
       <view class="ui-flex">
         <view class="ui-flex-item">
-          {{todyWeather.temperature}}
+          <text class="line">{{todyWeather.temperature}}</text>
+          <text class="line">风力: {{todyWeather.wind}}</text>
         </view>
         <view class="ui-flex-item">
           <view class="pm25">
@@ -25,15 +32,6 @@
           </view>
         </view>
       </view>
-
-      <!--<text>城市：{{todyWeather.city}}</text>
-      <text>PM2.5：{{todyWeather.pm25}}</text>
-      <text>日期：{{todyWeather.date}}</text>
-      <text>实时温度：{{todyWeather.realtimeTemperature}}</text>-->
-
-      <!--<text>温度：{{todyWeather.temperature}}</text>
-      <text>天气：{{todyWeather.weather}}</text>
-      <text>风向：{{todyWeather.wind}}</text>-->
     </view>
     <view class="ui-card-footer"></view>
   </view>
@@ -42,30 +40,30 @@
       <view class="panel-title">未来三天</view>
       <view class="panel-content">
         <view class="ui-flex">
-          <view wx:for="{{futureThreeDay}}" class="ui-flex-item">
-            <view class="weather-item {{item.style}}">
+          <view wx:for="{{futureThreeDay}}" wx:key="*this" class="ui-flex-item">
+            <view class="weather-item">
               <view>{{item.date}}</view>
-              <view><image class="weather-icon" src="{{item.img}}" background-size="cover" mode="aspectFit"></image></view>
+              <view class="ui-flex">
+                <view class="ui-flex-item" wx:for="{{item.iconSrc}}" wx:key="*this" wx:for-item="iconItem">
+                  <image class="weather-icon" src="{{iconItem.src}}" background-size="cover" mode="aspectFit"></image>
+                </view>
+              </view>
               <view>{{item.temperature}}</view>
             </view>
           </view>
         </view>
       </view>
     </view>
-  </view>
-
-  <!--<view class="werther">
-    <text>城市：{{todyWeather.city}}</text>
-    <text>PM2.5：{{todyWeather.pm25}}</text>
-    <text>日期：{{todyWeather.date}}</text>
-    <text>实时温度：{{todyWeather.realtimeTemperature}}</text>
-    <text>温度：{{todyWeather.temperature}}</text>
-    <text>天气：{{todyWeather.weather}}</text>
-    <text>风向：{{todyWeather.wind}}</text>
-  </view>-->
-  <view class="page-content">
-    <view class="werther">
-      <text>{{weatherData}}</text>
+    <view class="ui-panel weather-future">
+      <view class="panel-title">相关指数</view>
+      <view class="panel-content">
+          <view wx:for="{{variousIndex}}" wx:key="*this" class="ui-flex-item">
+            <view class="index-item">
+              <view class="index-item-title">{{item.title}}:{{item.value}}</view>
+              <view class="index-item-des">{{item.desc}}</view>
+            </view>
+          </view>
+      </view>
     </view>
   </view>
 </view>
