--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -33,7 +33,7 @@
             <button type="primary" loading="{{loading}}" bindtap="tapTo2048">2048</button>
           </view>
           <view class="ui-btn ui-flex-item">
-            
+            <button type="primary" loading="{{loading}}" bindtap="tapToXiaomi">xiaomi</button>
           </view>
         </view>
       </view>
