--- a/style/ui.wxss
+++ b/style/ui.wxss
@@ -17,6 +17,11 @@
   -webkit-flex: 2;
   flex: 2;
 }
+.ui-flex-item-3 {
+  -webkit-box-flex: 3;
+  -webkit-flex: 3;
+  flex: 3;
+}
 /*text-align*/
 .text-center{
   text-align: center;
@@ -94,4 +99,10 @@
 
 button {
   margin: 0.3em;
+}
+.hide{
+  display: none;
+}
+.show{
+  display: block;
 }
