--- a/pages/calc/calc.wxss
+++ b/pages/calc/calc.wxss
@@ -23,7 +23,7 @@
     width: auto;
 }
 .exp-result{
-    border-top: .5px solid #333;
+    border-top: .5px solid #ccc;
 }
 .result-icon{
     display: block;
