--- a/style/ui.wxss
+++ b/style/ui.wxss
@@ -70,7 +70,29 @@
 .ui-card-content {
   padding: 0.5em;
 }
-
+/*ui-modal*/
+.ui-modal{
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 100%;
+  left: 0;
+  background-color: rgb(248,248,248);
+}
+.ui-modal-form{
+  position: absolute;
+  top: 20%;
+  /*background-color: #ccc;*/
+  width: 100%;
+}
+.ui-modal-close{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 2em;
+  top: 2em;
+}
 /*ui-btn*/
 
 /*.ui-btn,
