--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,7 +27,15 @@
             <button type="primary" bindtap="tapToMemo">备忘录</button>
           </view>
           <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToQRcode">二维码生成器</button>
+          </view>
+        </view>
+        <view class="ui-flex">
+          <view class="ui-btn ui-flex-item">
             <button type="primary" bindtap="tapToAnimate">Animate</button>
+          </view>
+          <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToAnimate"></button>
           </view>
         </view>
       </view>
@@ -38,42 +46,13 @@
       <view class="panel-content">
         <view class="ui-flex">
           <view class="ui-btn ui-flex-item">
-            <button type="primary" loading="{{loading}}" bindtap="tapTo2048">2048</button>
+            <button type="primary" bindtap="tapTo2048">2048</button>
           </view>
           <view class="ui-btn ui-flex-item">
-            <button type="primary" loading="{{loading}}" bindtap="tapToXiaomi">xiaomi</button>
+            
           </view>
         </view>
       </view>
     </view>
   </view>
 </view>
-
-<!--<view class="container">
-<view class="section">
-  <view class="section__title">flex-direction: row</view>
-  <view class="flex-wrp" style="flex-direction:row;">
-    <view class="flex-item bc_green">1</view>
-    <view class="flex-item bc_red">2</view>
-    <view class="flex-item bc_blue">3</view>
-  </view>
-</view>
-  <view class="main-content">
-    <view class="menu-list">
-      <view class="item">
-        <image class="userinfo-avatar" src="../../src/img/menu-img.jpg" background-size="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-      </view>
-    </view>
-  </view>
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-  <view  bindtap="bindViewTap_xiaomi" class="userinfo">
-    <text class="userinfo-nickname">小米计算器</text>
-  </view>
-</view>-->
