--- a/pages/memo/memo.wxss
+++ b/pages/memo/memo.wxss
@@ -1,12 +1,5 @@
 /* pages/memo/memo.wxss */
-.list-content{
-  position: relative;
-  display: block;
-  width: 100%;
-  height: auto;
-  left: 0;
-  top: 0;
-}
+
 .memo-card {
   background-color: #42afff;
   border: none;
@@ -14,22 +7,24 @@
   padding: 1.1em;
   margin: 0.5em;
   border-radius: 20rpx;
-  position: relative;
 }
 
 button {
   margin: 0.5em;
 }
 
-.memo-card.success {
+.memo-card.success,
+.ui-show-detail.success .content {
   background-color: #3ee4bf;
 }
 
-.memo-card.realtime {
+.memo-card.realtime,
+.ui-show-detail.realtime .content {
   background-color: #ffac45;
 }
 
-.memo-card.outtime {
+.memo-card.outtime,
+.ui-show-detail.outtime .content {
   background-color: #ff42b2;
 }
 
@@ -99,4 +94,44 @@ textarea.memo-con {
 input, textarea {
   background-color: #fff;
   font-size: 14px;
+}
+.ui-show-detail{
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 100%;
+  left: 0;
+  background-color: rgba(248,248,248,.3);
+  border-radius: 5px;
+}
+.ui-show-detail .content{
+  color: #fff;
+  width: 90%;
+  height: 60%;
+  position: relative;
+  left: 5%;
+  top: 17%;
+  border-radius: 5px;
+  background-color: #42afff;
+  box-shadow: 0 0 40rpx rgba(0,0,0,.7), 4px 4px 8px rgba(0,0,0,.06);
+}
+.ui-show-detail .title,
+.ui-show-detail .date{
+  height: 32px;
+  font-size: 14px;
+  padding: 20rpx;
+  line-height: 32px;
+}
+.ui-show-detail .title{
+  font-size: 18px
+}
+.ui-show-detail .con{
+  font-size: 14px;
+  margin: 20rpx;
+  text-indent: 30px;
+  word-wrap:break-word;
+}
+.state-icon{
+  z-index: 10;
 }
