--- a/app.wxss
+++ b/app.wxss
@@ -10,3 +10,12 @@ page{
 .page-content{
     padding: 1em 1.5em;
 }
+.tip-bottom{
+	width: 100%;
+	display: block;
+	height: 40px;
+	line-height: 40px;
+	font-size: 14px;
+	color: #ccc;
+	text-align: center;
+}
