--- a/pages/memo/memo.wxml
+++ b/pages/memo/memo.wxml
@@ -1,14 +1,8 @@
-
 <!--备忘录-->
 <view class="page">
-  <view class="list-content">
-    
-  
-  <view wx:for="{{memo}}" wx:key="{{index}}">
-    <view wx:if="{{item.state == 0}}">
-
+  <view wx:for="{{memo}}" wx:key="index">
       <!--正常-->
-      <view class="memo-card" style="{{item.style}}" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}">
+      <view wx:if="{{item.state == 0}}" class="memo-card" data-index="{{index}}" bindtap="showDetail">
         <view class="memo-name">{{item.name}}
           <image bindtap="setState" data-index="{{index}}" class="state-icon" src="../../src/icon/default.png"></image>
         </view>
@@ -18,13 +12,9 @@
         <view class="memo-content">
           <text>{{item.content}}</text>
         </view>
-        <view data-index="{{index}}" bindtap="delItem" class="innerdel">删除</view>
       </view>
-    </view>
-    <view wx:elif="{{item.state == 3}}">
-
       <!--完成-->
-      <view class="memo-card success" style="{{item.style}}" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}">
+      <view wx:elif="{{item.state == 3}}" class="memo-card success" data-index="{{index}}" bindtap="showDetail">
         <view class="memo-name">{{item.name}}
           <image class="state-icon" bindtap="setState" data-index="{{index}}" src="../../src/icon/success.png"></image>
         </view>
@@ -33,11 +23,8 @@
           <text>{{item.content}}</text>
         </view>
       </view>
-    </view>
-    <view wx:elif="{{item.state == 1}}">
-
       <!--进行中-->
-      <view class="memo-card realtime" style="{{item.style}}" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}">
+      <view wx:elif="{{item.state == 1}}" class="memo-card realtime" data-index="{{index}}" bindtap="showDetail">
         <view class="memo-name">{{item.name}}
           <image class="state-icon" bindtap="setState" data-index="{{index}}" src="../../src/icon/realtime.png"></image>
         </view>
@@ -46,11 +33,8 @@
           <text>{{item.content}}</text>
         </view>
       </view>
-    </view>
-    <view wx:else>
-
       <!--超时-->
-      <view class="memo-card outtime" style="{{item.style}}" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}">
+      <view wx:else class="memo-card outtime" data-index="{{index}}" bindtap="showDetail">
         <view class="memo-name">{{item.name}}
           <image class="state-icon" bindtap="setState" data-index="{{index}}" src="../../src/icon/outtime.png"></image>
         </view>
@@ -58,11 +42,10 @@
         <view class="memo-content">
           <text>{{item.content}}</text>
         </view>
-      </view>
     </view>
   </view>
-  </view>
   <button type="primary" bindtap="openAddModal">增加备忘录</button>
+  <text class="tip-bottom">你可以在内容管理中清空所有的备忘录</text>
 </view>
 <view animation="{{modalAnimate}}" class="ui-modal">
   <image class="ui-modal-close" bindtap="closeAddModal" src="../../src/icon/close.png"></image>
@@ -70,13 +53,20 @@
     <view class="memo-add">
       <view class="memo-title">
         <view class="label">备忘名:</view>
-        <input class="memo-value" name="title" placeholder="备忘名"/>
+        <input class="memo-value" name="title" maxlength="12" placeholder="备忘名"/>
       </view>
       <view class="memo-add-content">
-        <textarea fixed="true" class="memo-con" name="content" placeholder="输入备忘内容..." maxlength="210" cursor-spacing="5" />
+        <textarea class="memo-con" name="content" placeholder="输入备忘内容..." fixed="true" maxlength="240" cursor-spacing="5" />
       </view>
     </view>
     <button type="primary" formType="reset">重置</button>
     <button type="primary" formType="submit">增加备忘录</button>
   </form>
 </view>
+<!-- <view animation="{{detailAnimate}}" bindtap="closeDetail" class="ui-show-detail {{detailStyle}}">
+  <view class="content">
+      <view class="title">{{detalItem.name}}</view>
+      <view class="date">{{detalItem.date}}</view>
+      <view class="con"><text>{{detalItem.content}}</text></view>
+  </view>
+</view> -->
