--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -30,6 +30,22 @@
             <button type="primary" bindtap="tapToQRcode">二维码生成器</button>
           </view>
         </view>
+        <view class="ui-flex">
+          <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToSchedule">日程管理</button>
+          </view>
+          <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToAround">周围有什么</button>
+          </view>
+        </view>
+        <view class="ui-flex">
+          <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToPoi">吃喝玩乐</button>
+          </view>
+          <view class="ui-btn ui-flex-item">
+            <button type="primary" bindtap="tapToAround">周围有什么</button>
+          </view>
+        </view>
       </view>
     </view>
     <!--小游戏-->
