--- a/pages/memo/memo.wxml
+++ b/pages/memo/memo.wxml
@@ -49,7 +49,7 @@
 </view>
 <view animation="{{modalAnimate}}" class="ui-modal">
   <image class="ui-modal-close" bindtap="closeAddModal" src="../../src/icon/close.png"></image>
-  <form class="ui-modal-form" bindsubmit="addOneMemo" bindreset="formReset">
+  <form class="ui-modal-form" report-submit="true" bindsubmit="addOneMemo" bindreset="formReset">
     <view class="memo-add">
       <view class="memo-title">
         <view class="label">备忘名:</view>
@@ -59,8 +59,8 @@
         <textarea class="memo-con" name="content" placeholder="输入备忘内容..." fixed="true" maxlength="240" cursor-spacing="5" />
       </view>
     </view>
-    <button type="primary" formType="reset">重置</button>
-    <button type="primary" formType="submit">增加备忘录</button>
+    <button type="primary" form-type="reset">重置</button>
+    <button type="primary" form-type="submit">增加备忘录</button>
   </form>
 </view>
 <!-- <view animation="{{detailAnimate}}" bindtap="closeDetail" class="ui-show-detail {{detailStyle}}">
