--- a/app.wxss
+++ b/app.wxss
@@ -8,7 +8,7 @@ page{
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
 .page-content{
-    padding: 1em 1.5em;
+    padding: 1em .5em;
 }
 .tip-bottom{
 	width: 100%;
@@ -18,4 +18,11 @@ page{
 	font-size: 14px;
 	color: #ccc;
 	text-align: center;
+}
+.page-title{
+	height: 100rpx;
+	line-height: 100rpx;
+	text-align: center;
+	font-size: 30rpx;
+	font-weight: 700;
 }
