--- a/style/ui.wxss
+++ b/style/ui.wxss
@@ -1,17 +1,14 @@
 /*flex float*/
-
 .ui-flex {
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
 }
-
 .ui-flex-item {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   flex: 1;
 }
-
 .ui-flex-item-2 {
   -webkit-box-flex: 2;
   -webkit-flex: 2;
@@ -22,18 +19,18 @@
   -webkit-flex: 3;
   flex: 3;
 }
+
 /*text-align*/
-.text-center{
+.text-center {
   text-align: center;
 }
-/*ui-panel*/
 
+/*ui-panel*/
 .ui-panel {
   width: 100%;
   height: auto;
   overflow: hidden;
 }
-
 .panel-title {
   height: 1.6em;
   line-height: 1.6em;
@@ -41,58 +38,58 @@
   color: #333;
   font-weight: 600;
 }
-
 .panel-content {
   padding: 0.3em 0;
 }
 
 /*ui-card*/
-
 .ui-card {
-  margin: 0.3em 1em;
-  /*padding:.5em;*//*background-color: #333;*/
+  margin: .6em .5em;  /*padding:.5em;*/
+
+  /*background-color: #333;*/
   border: 1px solid #ccc;
   border-radius: 5px;
   font-family: -apple-system-font, Arial, "Times New Roman", "Helvetica Neue", sans-serif;
   letter-spacing: 1px;
 }
-
 .ui-card-in-page-content {
   margin: 0;
 }
-
 .ui-card-header {
   text-align: center;
   height: 3em;
   line-height: 3em;
 }
-
 .ui-card-content {
   padding: 0.5em;
 }
-/*ui-modal*/
-.ui-modal{
+
+/*ui-modal*//*ui-popup*/
+.ui-modal, .ui-popup {
   position: fixed;
   display: block;
   width: 100%;
   height: 100%;
   top: 100%;
   left: 0;
-  background-color: rgb(248,248,248);
+  background-color: rgb(248, 248, 248);
 }
-.ui-modal-form{
+.ui-modal-form {
   position: absolute;
-  top: 20%;
-  /*background-color: #ccc;*/
+  top: 20%;  /*background-color: #ccc;*/
   width: 100%;
 }
-.ui-modal-close{
+.ui-modal-close {
   width: 30px;
   height: 30px;
   position: absolute;
   right: 2em;
   top: 2em;
 }
+
+
+
+
 /*ui-btn*/
 
 /*.ui-btn,
@@ -122,9 +119,9 @@
 button {
   margin: 0.3em;
 }
-.hide{
+.hide {
   display: none;
 }
-.show{
+.show {
   display: block;
 }
