--- a/pages/poi/poi.wxss
+++ b/pages/poi/poi.wxss
@@ -1,10 +1,34 @@
 /* pages/poi/poi.wxss */
-.map_container{ 
-    height: 300px; 
-    width: 100%; 
-} 
- 
-.map { 
-    height: 100%; 
-    width: 100%; 
+.map_container {
+	height: 300px;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.map {
+	height: 100%;
+	width: 100%;
+}
+.search-result {
+
+}
+.result-swiper{
+	width: 100%;
+	height: 100%;
+}
+.no-content{
+	height: 100%;
+	width: 100%;
+	font-size: 14px;
+	color: #ccc;
+	text-align: center;
+	line-height: 100px;
+}
+.result-item{
+	margin: 5% 5%;
+	height: 90%;
+	width: 90%;
+	border:1rpx solid #eee;
+	box-shadow: 0 0 20rpx rgba(120, 120, 120, .3);
 }
