--- a/pages/schedule/add/add.wxml
+++ b/pages/schedule/add/add.wxml
@@ -14,15 +14,14 @@
 				    <view class="picker">{{startTime}}</view>
 				</picker>
 				<view class="line">-</view>
-				<picker class="end" mode="time" name="end" value="{{endTime}}" start="00:00" end="23:59" bindchange="endTimeChange">
+				<picker class="end" mode="time" name="end" value="{{endTime}}" start="{{endStart}}" end="23:59" bindchange="endTimeChange">
 				    <view class="picker">{{endTime}}</view>
 				</picker>
 			</view>
 		    <view class="schedule-desc">
 		    	<view class="label">日程描述:</view>
-		    	<textarea bindblur="bindTextAreaBlur" name="desc" auto-height placeholder="在这里添加具体的描述信息..." />
-		    </view>
-			
+		    	<textarea name="desc" auto-height placeholder="在这里添加具体的描述信息..." />
+		    </view>		
 	    </view>
 	    <button type="primary" form-type="reset">重置</button>
 	    <button type="primary" bindtap="back">取消</button>
