--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,7 @@
 /**app.wxss**/
 /*@import 'src/style/weui.wxss';*/
 @import 'style/ui.wxss';
+@import "component/wxSearch/wxSearch.wxss";
 page{
     background-color: #F8F8F8;
     font-size: 16px;
