--- a/pages/around/around.wxss
+++ b/pages/around/around.wxss
@@ -17,16 +17,19 @@
 .map-detail-info{
 	display: block;
 	width: 100%;
-	height: 100px;
+	height: 160rpx;
 	background-color: #ccc;
-	border-radius: 2px;
 	overflow: hidden;
 }
 .searchbar{
-	height: 40px;
-	line-height: 40px;
+	height: 80rpx;
+	line-height: 80rpx;
 }
 .searchbar input{
-	height: 40px;
-	line-height: 40px;
+	height: 80rpx;
+	line-height: 80rpx;
+}
+
+.scroll-item{
+	background-color: #44abe5;
 }
